--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "php": ">=7.4",
     "ext-json": "*",
     "contao/core-bundle": "^4.9",
-    "doctrine/dbal": "^3.0",
+    "doctrine/dbal": "^2.0 || ^3.0",
     "isotope/isotope-core": "^2.6",
     "symfony/dependency-injection": "^4.4 || ^5.0",
     "symfony/http-client": "^4.4 || ^5.0",
